# GENAI

./: README.md  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb  pyproject.toml
data/raw/: architecture_notes.md
data/raw/policies/: policy_manual.md
data/raw/product/: catalog.json
docs/labs/: section_1_design_applications.md  section_2_data_preparation.md  section_3_application_development.md  section_4_assembling_and_deploying.md  section_5_governance.md  section_6_evaluation_and_monitoring.md
notebooks/databricks/: 01_section_1_design_applications.py  02_section_2_data_preparation.py  03_section_3_application_development.py  04_section_4_assembling_and_deploying.py  05_section_5_governance.py  06_section_6_evaluation_and_monitoring.py
notebooks/databricks_ipynb/: 01_section_1_design_applications.ipynb  02_section_2_data_preparation.ipynb  03_section_3_application_development.ipynb  04_section_4_assembling_and_deploying.ipynb  05_section_5_governance.ipynb  06_section_6_evaluation_and_monitoring.ipynb
src/databricks_genai_practice/: __init__.py  catalog.py  chunking.py  data_quality.py  deployment.py  guardrails.py  model_selection.py  monitoring.py  pipelines.py  prompts.py  retrieval_eval.py  study_guide.py  tools.py
tests/: test_catalog.py
